# MathEvaluator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: cli_math.py
src/math_calculator/: explicit.py  implicit.py
src/math_evaluator/: __init__.py  explicit.py  implicit.py
tests/: test_parser.py
